省去邮件配置

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -180,10 +180,10 @@ attachments.path=data/attachments
 # mail.smtp.user=admin
 # mail.smtp.pass=
 # mail.smtp.channel=ssl
-mail.smtp.host=smtp.int-yt.com
-mail.smtp.user=yqpt2_rest@int-yt.com
-mail.smtp.pass=psdrest
-email.from=yqpt2_rest@int-yt.com
+mail.smtp.host=
+mail.smtp.user=
+mail.smtp.pass=
+email.from=
 
 # Url-resolving in Jobs
 # ~~~~~~
